.builder/tmp/out_1.log
source/Game/Pipe.c: In function 'PipeManagerCreate':
source/Game/Pipe.c:54:41: error: expected ',' or ';' before ')' token
         int j = rand()%manager->gapCount);
                                         ^
source/Game/Pipe.c:55:9: warning: implicit declaration of function 'printf' [-Wimplicit-function-declaration]
         printf("%d\n", j);
         ^~~~~~
source/Game/Pipe.c:55:9: warning: incompatible implicit declaration of built-in function 'printf'
source/Game/Pipe.c:55:9: note: include '<stdio.h>' or provide a declaration of 'printf'
source/Game/Pipe.c: In function 'PipeManagerUpdate':
source/Game/Pipe.c:77:45: error: expected ',' or ';' before ')' token
             int j = rand()%manager->gapCount);
                                             ^
source/Game/Pipe.c:78:13: warning: incompatible implicit declaration of built-in function 'printf'
             printf("%d\n", j);
             ^~~~~~
source/Game/Pipe.c:78:13: note: include '<stdio.h>' or provide a declaration of 'printf'
source/Game/Pipe.c: In function 'PipeManagerCreate':
source/Game/Pipe.c:55:9: warning: implicit declaration of function 'printf' [-Wimplicit-function-declaration]
         printf("%d\n", j);
         ^~~~~~
source/Game/Pipe.c:55:9: warning: incompatible implicit declaration of built-in function 'printf'
source/Game/Pipe.c:55:9: note: include '<stdio.h>' or provide a declaration of 'printf'
source/Game/Pipe.c: In function 'PipeManagerUpdate':
source/Game/Pipe.c:78:13: warning: incompatible implicit declaration of built-in function 'printf'
             printf("%d\n", j);
             ^~~~~~
source/Game/Pipe.c:78:13: note: include '<stdio.h>' or provide a declaration of 'printf'
source/Game/Pipe.c: In function 'PipeManagerCreate':
source/Game/Pipe.c:55:9: warning: implicit declaration of function 'printf' [-Wimplicit-function-declaration]
         printf("%d\n", j);
         ^~~~~~
source/Game/Pipe.c:55:9: warning: incompatible implicit declaration of built-in function 'printf'
source/Game/Pipe.c:55:9: note: include '<stdio.h>' or provide a declaration of 'printf'
source/Game/Pipe.c: In function 'PipeManagerUpdate':
source/Game/Pipe.c:78:13: warning: incompatible implicit declaration of built-in function 'printf'
             printf("%d\n", j);
             ^~~~~~
source/Game/Pipe.c:78:13: note: include '<stdio.h>' or provide a declaration of 'printf'
source/Game/Pipe.c: In function 'PipeManagerCreate':
source/Game/Pipe.c:55:9: warning: implicit declaration of function 'printf' [-Wimplicit-function-declaration]
         printf("%d\n", j);
         ^~~~~~
source/Game/Pipe.c:55:9: warning: incompatible implicit declaration of built-in function 'printf'
source/Game/Pipe.c:55:9: note: include '<stdio.h>' or provide a declaration of 'printf'
source/Game/Pipe.c: In function 'PipeManagerUpdate':
source/Game/Pipe.c:78:13: warning: incompatible implicit declaration of built-in function 'printf'
             printf("%d\n", j);
             ^~~~~~
source/Game/Pipe.c:78:13: note: include '<stdio.h>' or provide a declaration of 'printf'
source/Game/Pipe.c: In function 'PipeManagerCreate':
source/Game/Pipe.c:55:9: warning: implicit declaration of function 'printf' [-Wimplicit-function-declaration]
         printf("%d\n", j);
         ^~~~~~
source/Game/Pipe.c:55:9: warning: incompatible implicit declaration of built-in function 'printf'
source/Game/Pipe.c:55:9: note: include '<stdio.h>' or provide a declaration of 'printf'
source/Game/Pipe.c: In function 'PipeManagerUpdate':
source/Game/Pipe.c:78:13: warning: incompatible implicit declaration of built-in function 'printf'
             printf("%d\n", j);
             ^~~~~~
source/Game/Pipe.c:78:13: note: include '<stdio.h>' or provide a declaration of 'printf'
source/Game/Pipe.c: In function 'PipeManagerCreate':
source/Game/Pipe.c:55:9: warning: implicit declaration of function 'printf' [-Wimplicit-function-declaration]
         printf("%d\n", j);
         ^~~~~~
source/Game/Pipe.c:55:9: warning: incompatible implicit declaration of built-in function 'printf'
source/Game/Pipe.c:55:9: note: include '<stdio.h>' or provide a declaration of 'printf'
source/Game/Pipe.c: In function 'PipeManagerUpdate':
source/Game/Pipe.c:78:13: warning: incompatible implicit declaration of built-in function 'printf'
             printf("%d\n", j);
             ^~~~~~
source/Game/Pipe.c:78:13: note: include '<stdio.h>' or provide a declaration of 'printf'
source/Game/Pipe.c: In function 'PipeManagerCreate':
source/Game/Pipe.c:55:9: warning: implicit declaration of function 'printf' [-Wimplicit-function-declaration]
         printf("%d\n", j);
         ^~~~~~
source/Game/Pipe.c:55:9: warning: incompatible implicit declaration of built-in function 'printf'
source/Game/Pipe.c:55:9: note: include '<stdio.h>' or provide a declaration of 'printf'
source/Game/Pipe.c: In function 'PipeManagerUpdate':
source/Game/Pipe.c:78:13: warning: incompatible implicit declaration of built-in function 'printf'
             printf("%d\n", j);
             ^~~~~~
source/Game/Pipe.c:78:13: note: include '<stdio.h>' or provide a declaration of 'printf'
source/Game/Pipe.c: In function 'PipeManagerCreate':
source/Game/Pipe.c:48:5: warning: implicit declaration of function 'printf' [-Wimplicit-function-declaration]
     printf("%d %d\n", manager->gapCount, screenHeight);
     ^~~~~~
source/Game/Pipe.c:48:5: warning: incompatible implicit declaration of built-in function 'printf'
source/Game/Pipe.c:48:5: note: include '<stdio.h>' or provide a declaration of 'printf'
source/Game/Pipe.c: In function 'PipeManagerCreate':
source/Game/Pipe.c:48:5: warning: implicit declaration of function 'printf' [-Wimplicit-function-declaration]
     printf("%d %d\n", manager->gapCount, screenHeight);
     ^~~~~~
source/Game/Pipe.c:48:5: warning: incompatible implicit declaration of built-in function 'printf'
source/Game/Pipe.c:48:5: note: include '<stdio.h>' or provide a declaration of 'printf'
source/Game/Pipe.c: In function 'PipeManagerCreate':
source/Game/Pipe.c:48:5: warning: implicit declaration of function 'printf' [-Wimplicit-function-declaration]
     printf("%d %d\n", manager->gapCount, screenHeight);
     ^~~~~~
source/Game/Pipe.c:48:5: warning: incompatible implicit declaration of built-in function 'printf'
source/Game/Pipe.c:48:5: note: include '<stdio.h>' or provide a declaration of 'printf'
